or binary read access is possible. Please read the following for details:

To be considered regarding read access checks
=============================================

* "access" flag is hiding and protecting entire project. This includes binaries
  and sources. It can only be used at project creation time and can just be
  globally enabled (aka make it public again) afterwards.
   This flag can only be used on projects.

* "sourceaccess" flag is hiding the sources to non maintainers, this includes also debug packages
  in case the distribution is supporting this correctly.
    This flag can also only be used at package creation time. There is no code
  yet which is checking for possible references to this package.
  This flag can be used on projects or packages.

* "downloadbinary" permission still exists like before. However, unlike "access" 
  and "sourceaccess" this is not a security feature. It is just a convinience feature, which
  makes it impossible to get the binaries via the API directly. But it still possible
  to get the binaries via build time in any case.

Security aspects
================

Former OBS releases lack protection against XSS attacks. Esp. public instances
should update to OBS 2.3, which is using rails plugins to protect against XSS
attempts. This fixes (CVE-2011-0462).

Building in "chroot" environments is known to be unsecure. XEN and KVM is considered to
be a secure environment. However KVM is known to be unstable, it leads to build
failures.

Apache & mod_rails switch
=========================

Former OBS versions used lighttpd as default web server. We have switched to 
apache with mod_rails (known as passenger) as default web server. 
We have also added an mod_xforward apache module to allow unloading the rails
stack with long running requests to the backend.
Please note that current apache2 versions have a known bug which cuts the http
headers regardless to it's configuration. Please use apache2 from openSUSE:Tools